overlays/develop/genkohoshu-01/b/i-kokyaku/i-kokyaku-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: i-kokyaku
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
