overlays/develop/genkohoshu-01/b/i-kokyaku/i-kokyaku-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: i-kokyaku
  name: i-kokyaku
  namespace: bgd
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: i-kokyaku
---
