overlays/develop/genkohoshu-01/b/i-kokyaku/i-kokyaku-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: i-kokyaku
  name: i-kokyaku
  namespace: bgd
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: i-kokyaku
    weight: 100
